--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
+    "@vue-hero-icons/solid": "^1.7.2",
     "autoprefixer": "^10.4.4",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
